# collisions

./: LICENSE  README.md  Tutorial.ipynb  docker-compose.yml
analysis/: event.py
collide/: __init__.py  event.py  requirements.txt  test_event.py
events/: Dockerfile
events/collisions/: CMakeLists.txt  config.cc  config.h  generate.cc
events/event_api/: event.py  event_api.py
generator/: Dockerfile
generator/pythia_interface/: CMakeLists.txt  config.cc  config.h  generate.cc  generate.h
generator/pythia_interface/pythia_config/: processes.yml
generator/rest_api/: app.py  event.py  requeriments.txt
